fix ci issue
